added themes, yaml and web security props

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -488,13 +488,13 @@ accept.authn.users=casuser::Mellon
 # CAS Protocol Security Filter
 #
 # Are multi-valued parameters accepted?
-# cas.http.allow.multivalue.params=false
+# httprequest.allowMultiValueParameters=false
 
 # Define the list of request parameters to examine for sanity
-# cas.http.check.params=ticket,service,renew,gateway,warn,target,SAMLart,pgtUrl,pgt,pgtId,pgtIou,targetService
+# httprequest.paramsToCheck=ticket,service,renew,gateway,warn,target,SAMLart,pgtUrl,pgt,pgtId,pgtIou,targetService,entityId,token
 
 # Define the list of request parameters only allowed via POST
-# cas.http.allow.post.params=username,password
+# httprequest.onlyPostParams=username,password
 
 ##
 # JSON Service Registry
@@ -568,7 +568,7 @@ spring.aop.proxy-target-class=true
 
 # Default is true. Switch this to "false" to not enforce the specified encoding in any case,
 # applying it as default response encoding as well.
-# httprequest.web.encoding.force=true
+# httprequest.web.forceEncoding=true
 
 ##
 # Response Headers
