--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -863,6 +863,13 @@ spring.aop.proxy-target-class=true
 # oauth.refresh.token.timeToKillInSeconds=2592000
 
 ##
+# Stormpath Authentication
+#
+# cas.authn.stormpath.apiKey=
+# cas.authn.stormpath.applicationId=
+# cas.authn.stormpath.secretkey=
+
+##
 # Authentication Delegation Using Pac4j
 #
 # cas.pac4j.client.authn.typedidused=true
