added audit, security config

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -147,7 +147,7 @@ server.session.tracking-modes=COOKIE
 # CAS UI Resolution
 #
 # cas.themeResolver.defaultThemeName=cas-theme-default
-# cas.themeResolver.param.name=theme
+# cas.themeResolver.paramName=theme
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
@@ -533,11 +533,12 @@ isLog4jAutoInitializationDisabled=true
 #
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
-# cas.audit.singleline=true
-# cas.audit.singleline.separator=|
-# cas.audit.format=DEFAULT
-# cas.audit.ignore.failures=false
-# cas.audit.appcode=CAS
+
+# cas.audit.useSingleLine=true
+# cas.audit.singlelineSeparator=|
+# cas.audit.auditFormat=DEFAULT
+# cas.audit.ignoreAuditFailures=false
+# cas.audit.appCode=CAS
 #
 ## JDBC Audits
 #
