--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -660,28 +660,28 @@ spring.aop.proxy-target-class=true
 # WS-FED
 #
 # The claim from ADFS that should be used as the user's identifier.
-# cas.wsfed.idp.idattribute=upn
+# cas.wsfed.identityAttribute=upn
 #
 # Federation Service identifier
-# cas.wsfed.idp.id=https://adfs.example.org/adfs/services/trust
+# cas.wsfed.identityProviderIdentifier=https://adfs.example.org/adfs/services/trust
 #
 # The ADFS login url.
-# cas.wsfed.idp.url=https://adfs.example.org/adfs/ls/
+# cas.wsfed.identityProviderUrl=https://adfs.example.org/adfs/ls/
 #
 # Identifies resource(s) that point to ADFS's signing certificates.
 # These are used verify the WS Federation token that is returned by ADFS.
 # Multiple certificates may be separated by comma.
-# cas.wsfed.idp.signingcerts=classpath:adfs-signing.crt
+# cas.wsfed.signingCertificateResources=classpath:adfs-signing.crt
 #
 # Unique identifier that will be set in the ADFS configuration.
-# cas.wsfed.rp.id=urn:cas:localhost
+# cas.wsfed.relyingPartyIdentifier=urn:cas:localhost
 #
 # Slack dealing with time-drift between the ADFS Server and the CAS Server.
-# cas.wsfed.idp.tolerance=10000
+# cas.wsfed.tolerance=10000
 #
 # Decides which bundle of attributes should be resolved during WS-FED authentication.
-# cas.wsfed.idp.attribute.resolver.enabled=true
-# cas.wsfed.idp.attribute.resolver.type=WSFED
+# cas.wsfed.attributeResolverEnabled=true
+# cas.wsfed.attributesType=WSFED
 
 ##
 # LDAP User Details
