added ntlm authN

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -514,15 +514,6 @@ accept.authn.users=casuser::Mellon
 # service.registry.initFromJson=true
 
 ##
-# Background Scheduler
-#
-# Wait for scheduler to finish running before shutting down CAS.
-# scheduler.shutdown.wait=true
-#
-# Attempt to interrupt background jobs when shutting down CAS
-# scheduler.shutdown.interruptJobs=true
-
-##
 # Log4j
 #
 # logging.config=file:/etc/cas/log4j2.xml
@@ -848,9 +839,9 @@ spring.aop.proxy-target-class=true
 ##
 # NTLM Authentication
 #
-# ntlm.authn.domain.controller=
-# ntlm.authn.include.pattern=
-# ntlm.authn.load.balance=true
+# ntlm.authn.domainController=
+# ntlm.authn.includePattern=
+# ntlm.authn.loadBalance=true
 
 ##
 # CAS OAuth Provider
