--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -638,9 +638,9 @@ spring.aop.proxy-target-class=true
 ##
 # Google Apps public/private key
 #
-# cas.saml.googleapps.publickey.file=file:/etc/cas/public.key
-# cas.saml.googleapps.privatekey.file=file:/etc/cas/private.p8
-# cas.saml.googleapps.key.alg=RSA
+# cas.saml.googleapps.publicKeyLocation=file:/etc/cas/public.key
+# cas.saml.googleapps.privateKeyLocation=file:/etc/cas/private.p8
+# cas.saml.googleapps.keyAlgorithm=RSA
 
 ##
 # Clearpass Configuration
