more saml config

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -581,7 +581,7 @@ spring.aop.proxy-target-class=true
 # cas.saml.response.skewAllowance=0
 #
 # Indicates whether SAML ticket id generation should be saml2-compliant.
-# cas.saml.ticketid.saml2=false
+# cas.saml.ticketidSaml2=false
 #
 # Indicates the default namespace used for SAML attributes
 # cas.saml.attribute.namespace=http://www.ja-sig.org/products/cas/
