REST services config

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -704,8 +704,8 @@ spring.aop.proxy-target-class=true
 ##
 # CAS REST API Services
 #
-# cas.rest.services.attributename=
-# cas.rest.services.attributevalue=
+# cas.rest.services.attributeName=
+# cas.rest.services.attributeValue=
 
 ##
 # Ticket Registry Encryption
