--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -550,7 +550,8 @@ spring.aop.proxy-target-class=true
 ##
 # Default sourced from WEB-INF/spring-configuration/applicationContext.xml:
 # Define how often should metric data be reported. Default is 30 seconds.
-# metrics.refresh.internal=30
+# metrics.refreshInternal=30
+# metrics.loggerName=perfStatsLogger
 
 ##
 # Encoding
