added views and few MFA settings

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -917,7 +917,7 @@ spring.aop.proxy-target-class=true
 # cas.mfa.principal.attributes=uid,memberOf
 # cas.mfa.request.parameter=authn_method
 # cas.mfa.failure.mode=NONE
-# cas.mfa.authn.ctx.attribute=authnContextClass
+# cas.mfa.authenticationContextAttribute=authnContextClass
 
 ##
 # OpenId Connect Settings
