--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -591,16 +591,16 @@ spring.aop.proxy-target-class=true
 # SAML Identity Provider
 #
 # cas.samlidp.metadata.location=file:/etc/cas/saml
-# cas.samlidp.hostname=mmoayyed.unicon.net
+# cas.samlidp.hostName=mmoayyed.unicon.net
 # cas.samlidp.scope=unicon.net
-# cas.samlidp.entityid=mmoayyed.unicon.net
+# cas.samlidp.entityId=mmoayyed.unicon.net
+# cas.samlidp.metadata.cacheExpirationMinutes=30
+# cas.samlidp.metadata.failFast=true
+# cas.samlidp.metadata.requireValidMetadata=true
 # cas.samlidp.response.skewAllowance=0
-# cas.samlidp.metadata.cache.exp.minutes=30
-# cas.samlidp.metadata.failfast.init=true
-# cas.samlidp.metadata.require.valid=true
-# cas.samlidp.logout.request.force.signed=true
-# cas.samlidp.logout.slo.callbacks.disabled=false
-# cas.samlidp.attribute.friendly.name=true
+# cas.samlidp.logout.forceSignedLogoutRequests=true
+# cas.samlidp.logout.singleLogoutCallbacksDisabled=false
+# cas.samlidp.useAttributeFriendlyName=true
 
 ##
 # SAML MDUI Display Adapter
