--- a/cas-management-webapp-support/build.gradle
+++ b/cas-management-webapp-support/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile libraries.javaximpl
     compile libraries.hibernate
     runtime libraries.groovy
+    compile project(':cas-server-core-configuration')
     compile project(':cas-server-core-services')
     compile project(':cas-server-core-util')
     compile project(':cas-server-core-logging')
