--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -84,3 +84,23 @@ principalFactory=defaultPrincipalFactory
 authenticationTransactionManager=defaultAuthenticationTransactionManager
 principalElectionStrategy=defaultPrincipalElectionStrategy
 auditTrailManager=slf4jAuditTrailManager
+
+
+##
+# CAS Authentication Attributes
+#
+cas.attrs.resolve.uid=uid
+cas.attrs.resolve.displayName=displayName
+cas.attrs.resolve.cn=commonName
+cas.attrs.resolve.affiliation=groupMembership
+
+##
+# CAS Server Settings
+#
+cas.server.name=https://cas.example.org:8443
+cas.server.prefix=${server.name}/cas
+
+##
+# Accepted Users Authentication
+#
+cas.authn.accept.users=casuser::Mellon
