working on properties

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -55,6 +55,7 @@ spring.thymeleaf.cache=false
 ##
 # CAS Log4j Configuration
 #
+# logging.config=file:/etc/cas/log4j2.xml
 server.context-parameters.isLog4jAutoInitializationDisabled=true
 
 ##
@@ -85,22 +86,27 @@ authenticationTransactionManager=defaultAuthenticationTransactionManager
 principalElectionStrategy=defaultPrincipalElectionStrategy
 auditTrailManager=slf4jAuditTrailManager
 
-
 ##
 # CAS Authentication Attributes
 #
 cas.attrs.resolve.uid=uid
-cas.attrs.resolve.displayName=displayName
+cas.attrs.resolve.displayName=displayNameN
 cas.attrs.resolve.cn=commonName
 cas.attrs.resolve.affiliation=groupMembership
 
-##
-# CAS Server Settings
-#
-cas.server.name=https://cas.example.org:8443
-cas.server.prefix=${server.name}/cas
+
 
 ##
-# Accepted Users Authentication
+# CAS Groovy Shell Console
 #
-cas.authn.accept.users=casuser::Mellon
+# shell.command-refresh-interval=15
+# shell.command-path-patterns=classpath*:/commands/**
+# shell.auth.simple.user.name=
+# shell.auth.simple.user.password=
+# shell.ssh.enabled=true
+# shell.ssh.port=2000
+# shell.telnet.enabled=false
+# shell.telnet.port=5000
+# shell.ssh.auth-timeout=3000
+# shell.ssh.idle-timeout=30000
+
