working on properties

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include 'cas-server-core-events'
 include 'cas-server-core-audit'
 include 'cas-server-core'
 include 'cas-server-documentation'
+include 'cas-server-support-audit-jdbc'
 include 'cas-server-support-events-mongo'
 include 'cas-server-support-events-jpa'
 include 'cas-server-support-yaml-service-registry'
@@ -98,6 +99,7 @@ include 'cas-server-webapp-session-redis'
 include 'cas-server-webapp-session-hazelcast'
 include 'cas-server-webapp-session-mongo'
 include 'cas-server-support-throttle'
+include 'cas-server-support-throttle-jdbc'
 include 'cas-server-support-validation'
 include 'cas-server-support-actions'
 include 'cas-server-support-actions-aup-ldap'
