switched to autowire from resource - left a few exceptions

--- a/cas-server-support-throttle-jdbc/build.gradle
+++ b/cas-server-support-throttle-jdbc/build.gradle
@@ -8,5 +8,7 @@ dependencies {
     compile project(':cas-server-support-audit-jdbc')
     compile project(':cas-server-core-audit')
     compile project(':cas-server-support-throttle')
+    testCompile project(path: ":cas-server-support-throttle", configuration: "tests")
+    testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
 }
 
