--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,8 @@ log4jVersion=2.6
 disruptorVersion=3.3.4
 inspektrVersion=1.5.GA
 
-springVersion=4.2.6.RELEASE
+springVersion=4.3.0.RELEASE
+springIntegrationVersion=4.2.8.RELEASE
 springWebflowClientVersion=1.0.3
 springWebflowVersion=2.4.2.RELEASE
 springDataCommonsVersion=1.11.4.RELEASE
@@ -77,7 +78,7 @@ springWebmvcPac4jVersion=1.0.2
 pac4jVersion=1.8.8
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
-jacksonDatabindVersion=2.6.6
+jacksonDatabindVersion=2.7.4
 hjsonVersion=1.1.4
 personDirectoryVersion=1.8.1
 quartzVersion=2.2.3
