--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,13 @@ ext {
     sonatypePassword = System.getProperty("sonatypePassword")
 }
 
+def isArtifactSigningRequired = {
+    if (publishReleases && sonatypeUsername != null && sonatypePassword != null) {
+        return true
+    }
+    return false
+}
+
 def projectMavenDeployer = {
     beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
@@ -247,9 +254,11 @@ allprojects {
     gradleLint.rules = ['dependency-parentheses', 'dependency-tuple']
 
     signing {
-        required = (publishReleases && sonatypeUsername != null && sonatypePassword != null)
+        required = isArtifactSigningRequired
         sign configurations.archives
     }
+
+    signArchives.enabled = rootProject.publishReleases || rootProject.publishSnapshots
 }
 
 subprojects {
