fixing configuration classes to move away from context scanning

--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -1,7 +1,29 @@
 ##
-# Config
+# Configuration Profile
 #
 spring.profiles.active=default
+
+##
+# CAS Thymeleaf Views
+#
+spring.thymeleaf.cache=false
+
+##
+# Embedded CAS Tomcat Container
+#
+server.context-path=/cas-management
+server.port=8443
+server.ssl.key-store=file:/etc/cas/thekeystore
+server.ssl.key-store-password=changeit
+server.ssl.key-password=changeit
+
+##
+# Log4J Configuration
+#
+server.context-parameters.isLog4jAutoInitializationDisabled=true
+# logging.config=file:/etc/cas/log4j2.xml
+
+####################################
 
 ##
 # CAS
@@ -9,6 +31,14 @@ spring.profiles.active=default
 cas.host=https://jasigcas.herokuapp.com
 cas.prefix=${cas.host}/cas
 cas.securityContext.casProcessingFilterEntryPoint.loginUrl=${cas.prefix}/login
+
+##
+# CAS Authentication Attributes
+#
+cas.attrs.resolve.uid=uid
+cas.attrs.resolve.displayName=displayName
+cas.attrs.resolve.cn=commonName
+cas.attrs.resolve.affiliation=groupMembership
 
 ##
 # Management
@@ -22,25 +52,6 @@ cas-management.securityContext.serviceProperties.service=${cas-management.prefix
 #
 cas-management.securityContext.serviceProperties.adminRoles=ROLE_ADMIN
 
-##
-# Views
-#
-spring.thymeleaf.cache=false
-
-##
-# Embedded Tomcat Container
-#
-server.context-path=/cas-management
-server.port=8443
-server.ssl.key-store=file:/etc/cas/thekeystore
-server.ssl.key-store-password=changeit
-server.ssl.key-password=changeit
-
-##
-# Log4J
-#
-isLog4jAutoInitializationDisabled=true
-# logging.config=file:/etc/cas/log4j2.xml
 
 ##
 # CAS Web Application Config
