--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -90,7 +90,7 @@ auditTrailManager=slf4jAuditTrailManager
 # CAS Authentication Attributes
 #
 cas.attrs.resolve.uid=uid
-cas.attrs.resolve.displayName=displayNameN
+cas.attrs.resolve.displayName=displayName
 cas.attrs.resolve.cn=commonName
 cas.attrs.resolve.affiliation=groupMembership
 
