--- a/cas-server-support-x509/build.gradle
+++ b/cas-server-support-x509/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(":cas-server-core-authentication")
     compile project(":cas-server-core-util")
     compile project(":cas-server-core-web")
+    compile project(":cas-server-support-ldap-core")
     compile libraries.bouncycastle
     compile libraries.spring
     compile libraries.ehcache
