working on inheritance hierarchy of props

--- a/cas-server-core-web/build.gradle
+++ b/cas-server-core-web/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     compile libraries.pac4j
     compile libraries.spring
     compile libraries.springboot
+    compile libraries.thmyeleaf
 }
