fixed ticket registry API to move away from embedded autowiring

--- a/build.gradle
+++ b/build.gradle
@@ -453,6 +453,7 @@ task javadoc(type: Javadoc, description: "Aggregate all Javadocs into a single d
     source subprojects.collect { project -> project.sourceSets.main.allJava }
     destinationDir = new File(buildDir, "javadoc")
     classpath = files(subprojects.collect { project -> project.sourceSets.main.compileClasspath })
+    failOnError = false
 }
 
 task aggregateJavadocsIntoJar(type: Jar, dependsOn: javadoc, description: "Aggregate all Javadocs into a single directory") {
