working on test cases

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -87,3 +87,28 @@ cas.attrs.resolve.affiliation=groupMembership
 # shell.ssh.auth-timeout=3000
 # shell.ssh.idle-timeout=30000
 
+
+cas.authn.accept.users=casuser::Misagh123
+
+cas.server.name=skjfhsdjkfhsdkjfhjskdhfkjsdf
+
+attributeRepository=stubAttributeRepository
+primaryAuthenticationHandler=acceptUsersAuthenticationHandler
+primaryPrincipalResolver=personDirectoryPrincipalResolver
+themeResolver=serviceThemeResolver
+serviceRegistryDao=jsonServiceRegistryDao
+ticketRegistry=defaultTicketRegistry
+ticketCipherExecutor=noOpCipherExecutor
+grantingTicketExpirationPolicy=ticketGrantingTicketExpirationPolicy
+authenticationPolicy=anyAuthenticationPolicy
+authenticationPolicyFactory=acceptAnyAuthenticationPolicyFactory
+authenticationThrottle=neverThrottle
+restAuthenticationThrottle=neverThrottle
+cookieCipherExecutor=tgcCipherExecutor
+cookieValueManager=defaultCookieValueManager
+principalFactory=defaultPrincipalFactory
+authenticationTransactionManager=defaultAuthenticationTransactionManager
+principalElectionStrategy=defaultPrincipalElectionStrategy
+auditTrailManager=slf4jAuditTrailManager
+
+cas.misagh=123123
