Updated an attribute for the redirecting after logout, and added more LDAP attributes such as cn and sn

--- a/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
@@ -125,7 +125,7 @@ cas.themeResolver.param.name=theme
 # WEB-INF/cas-servlet.xml
 #
 # Specify whether CAS should redirect to the specified service parameter on /logout requests
-# cas.logout.followServiceRedirects=false
+cas.logout.followServiceRedirects=true
 
 ##
 # CAS Cached Attributes Timeouts
