working on test cases

--- a/cas-server-support-hazelcast-ticket-registry/src/test/resources/application.properties
+++ b/cas-server-support-hazelcast-ticket-registry/src/test/resources/application.properties
@@ -1,1 +1,1 @@
-cas.ticket.registry.hazelcast.configLocation=sdlklfkjsdfjksldfjlksdf
+cas.ticket.registry.hazelcast.configLocation=classpath:hazelcast.xml
