--- a/cas-server-support-validation/build.gradle
+++ b/cas-server-support-validation/build.gradle
@@ -2,6 +2,9 @@ description = "Apereo CAS Web Application Protocol Validation"
 dependencies {
     compile libraries.spring
     compile libraries.hibernate
+    compile libraries.springboot
+    compile libraries.springcloud
+    compile libraries.thmyeleaf
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-validation")
     compile project(":cas-server-core-tickets")
