--- a/gradle.properties
+++ b/gradle.properties
@@ -79,6 +79,7 @@ pac4jVersion=1.8.8
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
 jacksonDatabindVersion=2.7.4
+jsonVersion=20160212
 hjsonVersion=1.1.4
 personDirectoryVersion=1.8.1
 quartzVersion=2.2.3
