working on test cases

--- a/cas-server-support-throttle-jdbc/build.gradle
+++ b/cas-server-support-throttle-jdbc/build.gradle
@@ -10,5 +10,7 @@ dependencies {
     compile project(":cas-server-support-throttle")
     testCompile project(path: ":cas-server-support-throttle", configuration: "tests")
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
+    testCompile project(path: ":cas-server-core")
+    testCompile project(path: ":cas-server-core-logout")
 }
 
