working on test cases

--- a/cas-server-core-audit/build.gradle
+++ b/cas-server-core-audit/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     testCompile project(":cas-server-core")
     testCompile project(":cas-server-support-cookie")
     testCompile project(path: ":cas-server-core", configuration: "tests")
+    testCompile libraries.inspektr
 }
