--- a/cas-management-webapp-support/build.gradle
+++ b/cas-management-webapp-support/build.gradle
@@ -17,5 +17,6 @@ dependencies {
     compile project(":cas-server-core-audit")
     compile project(":cas-server-support-oauth-core")
     compile project(":cas-server-support-saml-idp-core")
+    compile project(":cas-server-support-oidc-core")
     compile project(":cas-server-support-grouper")
 }
