--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -23,14 +23,13 @@ server.ssl.key-password=changeit
 server.context-parameters.isLog4jAutoInitializationDisabled=true
 # logging.config=file:/etc/cas/log4j2.xml
 
-####################################
-
 ##
 # CAS
 #
-cas.host=https://jasigcas.herokuapp.com
-cas.prefix=${cas.host}/cas
-cas.securityContext.casProcessingFilterEntryPoint.loginUrl=${cas.prefix}/login
+cas.server.name=https://jasigcas.herokuapp.com
+cas.server.prefix=${cas.server.name}/cas
+
+cas.mgmt.serverName=https://cas.example.org:8443
 
 ##
 # CAS Authentication Attributes
@@ -41,59 +40,8 @@ cas.attrs.resolve.cn=commonName
 cas.attrs.resolve.affiliation=groupMembership
 
 ##
-# Management
-#
-cas-management.host=https://localhost:8443
-cas-management.prefix=${cas-management.host}/cas-management
-cas-management.securityContext.serviceProperties.service=${cas-management.prefix}/callback
-
-##
-# Security
-#
-cas-management.securityContext.serviceProperties.adminRoles=ROLE_ADMIN
-
-
-##
 # CAS Web Application Config
 #
 server.session.timeout=1800
 server.session.cookie.http-only=true
 server.session.tracking-modes=COOKIE
-
-##
-# Management Authorization Rules
-#
-# User details file location that contains list of users
-# who are allowed access to the management webapp:
-# 
-# user.details.file.location=classpath:user-details.properties
-#
-#
-# LDAP Authorization
-#
-# ldap.url=ldap://localhost:1389
-# ldap.baseDn=dc=example,dc=org
-# ldap.user.searchFilter=cn={0}
-#
-# ldap.pool.blockWaitTime=5000
-# ldap.pool.validateOnCheckout=true
-# ldap.pool.validatePeriodically=true
-# ldap.pool.validatePeriod=5000
-# ldap.pool.idleTime=5000
-# ldap.pool.maxSize=1
-# ldap.pool.minSize=1
-# ldap.pool.prunePeriod=10000
-# ldap.connectTimeout=5000
-# ldap.useStartTLS=false
-# ldap.use.ssl=false
-#
-# ldap.authorizationgenerator.role.attribute=sn
-# ldap.authorizationgenerator.role.prefix=ROLE_
-# ldap.authorizationgenerator.allow.multiple=false
-
-##
-# JSON Service Registry
-#
-# Directory location where JSON service files may be found.
-# service.registry.config.location=classpath:services
-
