--- a/settings.gradle
+++ b/settings.gradle
@@ -26,6 +26,7 @@ include "cas-server-documentation"
 include "cas-server-support-audit-jdbc"
 include "cas-server-support-events-mongo"
 include "cas-server-support-events-jpa"
+include "cas-server-support-json-service-registry"
 include "cas-server-support-yaml-service-registry"
 include "cas-server-support-generic"
 include "cas-server-support-generic-remote-webflow"
