--- a/cas-management-webapp-support/build.gradle
+++ b/cas-management-webapp-support/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     compile project(":cas-server-support-saml-idp-core")
     compile project(":cas-server-support-oidc-core")
     compile project(":cas-server-support-grouper")
+    compile project(":cas-server-support-json-service-registry")
 }
