--- a/cas-server-support-grouper/build.gradle
+++ b/cas-server-support-grouper/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     compile project(":cas-server-core-services")
     testCompile project(":cas-server-core-authentication")
     testCompile project(path: ":cas-server-core-services", configuration: "tests")
+    testCompile project(path: ":cas-server-support-json-service-registry")
 }
