--- a/cas-server-support-saml-idp/build.gradle
+++ b/cas-server-support-saml-idp/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
     testCompile project(":cas-server-core")
     testCompile project(":cas-server-core-logout")
+    testCompile project(path: ":cas-server-support-json-service-registry")
 }
 
 
