--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -34,10 +34,10 @@ cas.mgmt.serverName=https://cas.example.org:8443
 ##
 # CAS Authentication Attributes
 #
-cas.attrs.resolve.uid=uid
-cas.attrs.resolve.displayName=displayName
-cas.attrs.resolve.cn=commonName
-cas.attrs.resolve.affiliation=groupMembership
+cas.authn.attributes.uid=uid
+cas.authn.attributes.displayName=displayName
+cas.authn.attributes.cn=cn
+cas.authn.attributes.affiliation=affiliation
 
 ##
 # CAS Web Application Config
