--- a/cas-server-core/src/test/resources/application.properties
+++ b/cas-server-core/src/test/resources/application.properties
@@ -1,3 +1,3 @@
-cas.attrs.resolve.uid=uid
-cas.attrs.resolve.eduPersonAffiliation=developer
-cas.attrs.resolve.groupMembership=adopters
+cas.authn.attributes.uid=uid
+cas.authn.attributes.eduPersonAffiliation=developer
+cas.authn.attributes.groupMembership=adopters
