--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -89,10 +89,10 @@ spring.aop.proxy-target-class=true
 ##
 # CAS Authentication Attributes
 #
-cas.attrs.resolve.uid=uid
-cas.attrs.resolve.displayName=displayName
-cas.attrs.resolve.cn=commonName
-cas.attrs.resolve.affiliation=groupMembership
+cas.authn.attributes.uid=uid
+cas.authn.attributes.displayName=displayName
+cas.authn.attributes.cn=commonName
+cas.authn.attributes.affiliation=groupMembership
 
 ##
 # CAS Groovy Shell Console
