--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -23,7 +23,7 @@ server.tomcat.basedir=build/tomcat
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 server.tomcat.accesslog.suffix=.log
-server.tomcat.max-http-header-size=2097152
+server.tomcat.max-http-header-size=2097150
 server.tomcat.max-threads=5
 server.tomcat.port-header=X-Forwarded-Port
 server.tomcat.protocol-header=X-Forwarded-Proto
@@ -85,6 +85,11 @@ server.context-parameters.isLog4jAutoInitializationDisabled=true
 #
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
+
+##
+# CAS Authentication Credentials
+#
+cas.authn.accept.users=casuser::Mellon
 
 ##
 # CAS Authentication Attributes
