fixed import issues

--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.context-parameters.isLog4jAutoInitializationDisabled=true
 cas.server.name=https://jasigcas.herokuapp.com
 cas.server.prefix=${cas.server.name}/cas
 
-cas.mgmt.serverName=https://cas.example.org:8443
+cas.mgmt.serverName=https://mmoayyed.unicon.net:8443
 
 ##
 # CAS Authentication Attributes
