Modified to run in local environment

--- a/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
@@ -518,17 +518,17 @@ ldap.authn.baseDn=ou=People,cn=%s,o=Tenants,dc=wavity,dc=com
 # Manager credentials to bind; only used for searches.
 # Only required by directories that prevent anonymous queries (e.g. AD) when performing
 # a search-and-bind authentication strategy.
-ldap.managerDn=cn=directory manager
+ldap.managerDn=uid=admin,ou=system
 # Change this fake password by the real one used in the setup environment
-ldap.managerPassword=password
+ldap.managerPassword=secret
 ldap.connectTimeout=3000
 
 # == Connection pooling settings ==
 
 # Changed to avoid masking ldap authentication messages
 #ldap.pool.minSize=3
-ldap.pool.minSize=50
-ldap.pool.maxSize=100
+ldap.pool.minSize=0
+ldap.pool.maxSize=10
 ldap.pool.blockWaitTime=3000
 # One of these three must be true
 ldap.pool.validateOnCheckIn=false
