--- a/cas-server-support-validation/build.gradle
+++ b/cas-server-support-validation/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     testCompile "javax.servlet:jstl:$javaxJstlVersion"
     testCompile project(path: ":cas-server-core-validation", configuration: "tests")
     testCompile project(":cas-server-support-cookie")
+    testCompile project(":cas-server-support-cookie")
 }
