--- a/cas-server-support-jdbc/build.gradle
+++ b/cas-server-support-jdbc/build.gradle
@@ -8,7 +8,9 @@ dependencies {
     runtime libraries.javaximpl 
     testCompile libraries.tests
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
+    
     testCompile project(":cas-server-core-util")
+    testCompile project(":cas-server-core-services")
 }
 
 
