cleaning up tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,6 @@ findbugsContribVersion=6.6.1
 findbugsSecVersion=1.4.5
 checkstyleVersion=6.19
 
-nodeVersion=4.4.3
-npmVersion=2.15.1
 
 javaxSevletVersion=3.1.0
 javaxElVersion=3.0.0
@@ -137,6 +135,7 @@ igniteVersion=1.6.0
 infinispanVersion=8.2.2.Final
 
 spockVersion=1.0-groovy-2.4
+jfigletVersion=0.0.7
 
 # Used by VersionEye to keep track of dependency versions
 versioneye.projectid=5677b4a5107997002d00131b
