--- a/cas-server-webapp-config/build.gradle
+++ b/cas-server-webapp-config/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compileOnly project(":cas-server-core")
     compileOnly project(":cas-server-core-audit")
     compileOnly project(":cas-server-core-logging")
+    compileOnly project(":cas-server-core-logout")
+    compileOnly project(":cas-server-support-cookie")
     compileOnly libraries.bouncycastle
 }
 
