--- a/cas-server-webapp-config/build.gradle
+++ b/cas-server-webapp-config/build.gradle
@@ -9,12 +9,14 @@ dependencies {
     compile project(":cas-server-core-web")
     compile libraries.hibernate
     compile project(":cas-server-support-actions")
-    compileOnly project(":cas-server-support-themes")
-    compileOnly project(":cas-server-core")
-    compileOnly project(":cas-server-core-audit")
-    compileOnly project(":cas-server-core-logging")
-    compileOnly project(":cas-server-core-logout")
-    compileOnly project(":cas-server-support-cookie")
+    testCompile project(":cas-server-support-themes")
+    testCompile project(":cas-server-core")
+    testCompile project(":cas-server-core-audit")
+    testCompile project(":cas-server-core-logging")
+    testCompile project(":cas-server-core-logout")
+    testCompile project(":cas-server-core-validation")
+    testCompile project(":cas-server-core")
+    testCompile project(":cas-server-support-cookie")
     compileOnly libraries.bouncycastle
 }
 
