--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     compile group: 'com.lmax', name: 'disruptor', version: disruptorVersion
     runtime group: 'org.springframework', name: 'spring-expression', version: springVersion
     runtime group: 'javax.servlet', name: 'jstl', version: javaxJstlVersion
-    runtime group: 'org.jasig.cas', name: 'cas-server-security-filter', version: casSecurityFilterVersion
+    runtime group: 'org.apereo.cas', name: 'cas-server-security-filter', version: casSecurityFilterVersion
     runtime(group: 'com.ryantenney.metrics', name: 'metrics-spring', version: dropwizardMetricsVersion) {
         exclude(group: 'org.slf4j', module: 'slf4j-api')
         exclude(group: 'org.springframework', module: 'spring-core')
