--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -54,7 +54,7 @@ spring.cloud.bus.ack.enabled=true
 ##
 # CAS Admin Status Endpoints
 #
-cas.securityContext.adminpages.ip=.+
+cas.securityContext.adminpages.ip=127\.0\.0\.1
 endpoints.enabled=true
 endpoints.sensitive=true
 management.context-path=/status
@@ -89,7 +89,7 @@ spring.aop.proxy-target-class=true
 ##
 # CAS Authentication Credentials
 #
-cas.authn.accept.users=casuser::Mellon
+# cas.authn.accept.users=casuser::Mellon
 
 ##
 # CAS Authentication Attributes
