--- a/cas-server-support-saml-googleapps/src/test/resources/application.properties
+++ b/cas-server-support-saml-googleapps/src/test/resources/application.properties
@@ -5,13 +5,13 @@ cas.server.prefix=${server.name}/cas
 # SAML
 #
 # Indicates the SAML response issuer
-cas.samlResponse.issuer=localhost
+cas.samlCore.issuer=localhost
 #
 # Indicates the skew allowance which controls the issue instant of the SAML response
-cas.samlResponse.skewAllowance=200
+cas.samlCore.skewAllowance=200
 #
 # Indicates whether SAML ticket id generation should be saml2-compliant.
-cas.samlResponse.ticketidSaml2=false
+cas.samlCore.ticketidSaml2=false
 
 ##
 # Google Apps public/private key
