--- a/settings.gradle
+++ b/settings.gradle
@@ -88,6 +88,7 @@ include "cas-server-support-pac4j-core"
 include "cas-server-support-shell"
 include "cas-server-support-rest"
 include "cas-server-support-rest-services"
+include "cas-server-support-rest-authentication"
 include "cas-server-support-yubikey"
 include "cas-server-support-duo"
 include "cas-server-support-hazelcast-ticket-registry"
