--- a/cas-server-core-logging/build.gradle
+++ b/cas-server-core-logging/build.gradle
@@ -3,7 +3,10 @@ description = 'Apereo CAS Core Logging'
 dependencies {
   compile project(':cas-server-core-api-ticket')
   compile project(':cas-server-core-web')
-  compile group: 'org.reflections', name: 'reflections', version:reflectionsVersion
+  compile(group: 'org.reflections', name: 'reflections', version:reflectionsVersion) {
+    exclude(group: 'org.javassist', module: 'javassist')
+  }
+  compile group: 'org.javassist', name: 'javassist', version:javassistVersion
   compile(group: 'org.springframework', name: 'spring-core', version:springVersion) {
     exclude(group: 'commons-logging', module: 'commons-logging')
   }
